internal/iantlr/alr2/gengine_parser.go
// Code generated from gengine.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // gengine

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type gengineParser struct {
	*antlr.BaseParser
}

var GengineParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func gengineParserInit() {
	staticData := &GengineParserStaticData
	staticData.LiteralNames = []string{
		"", "','", "'@name'", "'@id'", "'@code'", "'@desc'", "'@sal'", "", "",
		"'&&'", "'||'", "' and '", "' or '", "'&'", "'|'", "' sin '", "' snin '",
		"' sinc '", "' sninc '", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "'+'", "'-'", "'/'", "'*'", "'=='", "'>'", "'<'",
		"'>='", "'<='", "'!='", "'!'", "':='", "'='", "'+='", "'-='", "'*='",
		"'/='", "'['", "']'", "';'", "'{'", "'}'", "'('", "')'", "'.'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "NIL", "RULE", "AND", "OR", "AND_STR", "OR_STR",
		"AND_SINGLE", "OR_SINGLE", "SIN", "SNIN", "SINC", "SNINC", "CONC", "IF",
		"ELSE", "RETURN", "FOR", "BREAK", "FORRANGE", "CONTINUE", "TRUE", "FALSE",
		"NULL_LITERAL", "SALIENCE", "BEGIN", "END", "SIMPLENAME", "INT", "PLUS",
		"MINUS", "DIV", "MUL", "EQUALS", "GT", "LT", "GTE", "LTE", "NOTEQUALS",
		"NOT", "ASSIGN", "SET", "PLUSEQUAL", "MINUSEQUAL", "MULTIEQUAL", "DIVEQUAL",
		"LSQARE", "RSQARE", "SEMICOLON", "LR_BRACE", "RR_BRACE", "LR_BRACKET",
		"RR_BRACKET", "DOT", "DQUOTA_STRING", "DOTTEDNAME", "DOUBLEDOTTEDNAME",
		"REAL_LITERAL", "SL_COMMENT", "WS",
	}
	staticData.RuleNames = []string{
		"primary", "ruleEntity", "ruleName", "ruleDescription", "salience",
		"ruleContent", "statements", "statement", "concStatement", "expression",
		"mathExpression", "expressionAtom", "assignment", "returnStmt", "ifStmt",
		"elseIfStmt", "elseStmt", "forStmt", "breakStmt", "forRangeStmt", "continueStmt",
		"constant", "functionArgs", "integer", "realLiteral", "stringLiteral",
		"booleanLiteral", "functionCall", "methodCall", "threeLevelCall", "variable",
		"mathPmOperator", "mathMdOperator", "comparisonOperator", "logicalOperator",
		"assignOperator", "rangeOperator", "notOperator", "mapVar", "atName",
		"atId", "atCode", "atDesc", "atSal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// gengineParserInit initializes any static state used to implement gengineParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewgengineParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GengineParserInit() {
	staticData := &GengineParserStaticData
	staticData.once.Do(gengineParserInit)
}

// NewgengineParser produces a new parser instance for the optional input antlr.TokenStream.
func NewgengineParser(input antlr.TokenStream) *gengineParser {
	GengineParserInit()
	this := new(gengineParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GengineParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "gengine.g4"

	return this
}

// gengineParser tokens.
const (
	gengineParserEOF              = antlr.TokenEOF
	gengineParserT__0             = 1
	gengineParserT__1             = 2
	gengineParserT__2             = 3
	gengineParserT__3             = 4
	gengineParserT__4             = 5
	gengineParserT__5             = 6
	gengineParserNIL              = 7
	gengineParserRULE             = 8
	gengineParserAND              = 9
	gengineParserOR               = 10
	gengineParserAND_STR          = 11
	gengineParserOR_STR           = 12
	gengineParserAND_SINGLE       = 13
	gengineParserOR_SINGLE        = 14
	gengineParserSIN              = 15
	gengineParserSNIN             = 16
	gengineParserSINC             = 17
	gengineParserSNINC            = 18
	gengineParserCONC             = 19
	gengineParserIF               = 20
	gengineParserELSE             = 21
	gengineParserRETURN           = 22
	gengineParserFOR              = 23
	gengineParserBREAK            = 24
	gengineParserFORRANGE         = 25
	gengineParserCONTINUE         = 26
	gengineParserTRUE             = 27
	gengineParserFALSE            = 28
	gengineParserNULL_LITERAL     = 29
	gengineParserSALIENCE         = 30
	gengineParserBEGIN            = 31
	gengineParserEND              = 32
	gengineParserSIMPLENAME       = 33
	gengineParserINT              = 34
	gengineParserPLUS             = 35
	gengineParserMINUS            = 36
	gengineParserDIV              = 37
	gengineParserMUL              = 38
	gengineParserEQUALS           = 39
	gengineParserGT               = 40
	gengineParserLT               = 41
	gengineParserGTE              = 42
	gengineParserLTE              = 43
	gengineParserNOTEQUALS        = 44
	gengineParserNOT              = 45
	gengineParserASSIGN           = 46
	gengineParserSET              = 47
	gengineParserPLUSEQUAL        = 48
	gengineParserMINUSEQUAL       = 49
	gengineParserMULTIEQUAL       = 50
	gengineParserDIVEQUAL         = 51
	gengineParserLSQARE           = 52
	gengineParserRSQARE           = 53
	gengineParserSEMICOLON        = 54
	gengineParserLR_BRACE         = 55
	gengineParserRR_BRACE         = 56
	gengineParserLR_BRACKET       = 57
	gengineParserRR_BRACKET       = 58
	gengineParserDOT              = 59
	gengineParserDQUOTA_STRING    = 60
	gengineParserDOTTEDNAME       = 61
	gengineParserDOUBLEDOTTEDNAME = 62
	gengineParserREAL_LITERAL     = 63
	gengineParserSL_COMMENT       = 64
	gengineParserWS               = 65
)

// gengineParser rules.
const (
	gengineParserRULE_primary            = 0
	gengineParserRULE_ruleEntity         = 1
	gengineParserRULE_ruleName           = 2
	gengineParserRULE_ruleDescription    = 3
	gengineParserRULE_salience           = 4
	gengineParserRULE_ruleContent        = 5
	gengineParserRULE_statements         = 6
	gengineParserRULE_statement          = 7
	gengineParserRULE_concStatement      = 8
	gengineParserRULE_expression         = 9
	gengineParserRULE_mathExpression     = 10
	gengineParserRULE_expressionAtom     = 11
	gengineParserRULE_assignment         = 12
	gengineParserRULE_returnStmt         = 13
	gengineParserRULE_ifStmt             = 14
	gengineParserRULE_elseIfStmt         = 15
	gengineParserRULE_elseStmt           = 16
	gengineParserRULE_forStmt            = 17
	gengineParserRULE_breakStmt          = 18
	gengineParserRULE_forRangeStmt       = 19
	gengineParserRULE_continueStmt       = 20
	gengineParserRULE_constant           = 21
	gengineParserRULE_functionArgs       = 22
	gengineParserRULE_integer            = 23
	gengineParserRULE_realLiteral        = 24
	gengineParserRULE_stringLiteral      = 25
	gengineParserRULE_booleanLiteral     = 26
	gengineParserRULE_functionCall       = 27
	gengineParserRULE_methodCall         = 28
	gengineParserRULE_threeLevelCall     = 29
	gengineParserRULE_variable           = 30
	gengineParserRULE_mathPmOperator     = 31
	gengineParserRULE_mathMdOperator     = 32
	gengineParserRULE_comparisonOperator = 33
	gengineParserRULE_logicalOperator    = 34
	gengineParserRULE_assignOperator     = 35
	gengineParserRULE_rangeOperator      = 36
	gengineParserRULE_notOperator        = 37
	gengineParserRULE_mapVar             = 38
	gengineParserRULE_atName             = 39
	gengineParserRULE_atId               = 40
	gengineParserRULE_atCode             = 41
	gengineParserRULE_atDesc             = 42
	gengineParserRULE_atSal              = 43
)

// IPrimaryContext is an interface to support dynamic dispatch.
type IPrimaryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllRuleEntity() []IRuleEntityContext
	RuleEntity(i int) IRuleEntityContext

	// IsPrimaryContext differentiates from other interfaces.
	IsPrimaryContext()
}

type PrimaryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrimaryContext() *PrimaryContext {
	var p = new(PrimaryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_primary
	return p
}

func InitEmptyPrimaryContext(p *PrimaryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_primary
}

func (*PrimaryContext) IsPrimaryContext() {}

func NewPrimaryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PrimaryContext {
	var p = new(PrimaryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gengineParserRULE_primary

	return p
}

func (s *PrimaryContext) GetParser() antlr.Parser { return s.parser }

func (s *PrimaryContext) AllRuleEntity() []IRuleEntityContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleEntityContext); ok {
			len++
		}
	}

	tst := make([]IRuleEntityContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleEntityContext); ok {
			tst[i] = t.(IRuleEntityContext)
			i++
		}
	}

	return tst
}

func (s *PrimaryContext) RuleEntity(i int) IRuleEntityContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleEntityContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleEntityContext)
}

func (s *PrimaryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PrimaryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PrimaryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.EnterPrimary(s)
	}
}

func (s *PrimaryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.ExitPrimary(s)
	}
}

func (s *PrimaryContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case gengineVisitor:
		return t.VisitPrimary(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *gengineParser) Primary() (localctx IPrimaryContext) {
	localctx = NewPrimaryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, gengineParserRULE_primary)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(89)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == gengineParserRULE {
		{
			p.SetState(88)
			p.RuleEntity()
		}

		p.SetState(91)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleEntityContext is an interface to support dynamic dispatch.
type IRuleEntityContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	RULE() antlr.TerminalNode
	RuleName() IRuleNameContext
	BEGIN() antlr.TerminalNode
	RuleContent() IRuleContentContext
	END() antlr.TerminalNode
	RuleDescription() IRuleDescriptionContext
	Salience() ISalienceContext

	// IsRuleEntityContext differentiates from other interfaces.
	IsRuleEntityContext()
}

type RuleEntityContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleEntityContext() *RuleEntityContext {
	var p = new(RuleEntityContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleEntity
	return p
}

func InitEmptyRuleEntityContext(p *RuleEntityContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleEntity
}

func (*RuleEntityContext) IsRuleEntityContext() {}

func NewRuleEntityContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleEntityContext {
	var p = new(RuleEntityContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gengineParserRULE_ruleEntity

	return p
}

func (s *RuleEntityContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleEntityContext) RULE() antlr.TerminalNode {
	return s.GetToken(gengineParserRULE, 0)
}

func (s *RuleEntityContext) RuleName() IRuleNameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleNameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleNameContext)
}

func (s *RuleEntityContext) BEGIN() antlr.TerminalNode {
	return s.GetToken(gengineParserBEGIN, 0)
}

func (s *RuleEntityContext) RuleContent() IRuleContentContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleContentContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleContentContext)
}

func (s *RuleEntityContext) END() antlr.TerminalNode {
	return s.GetToken(gengineParserEND, 0)
}

func (s *RuleEntityContext) RuleDescription() IRuleDescriptionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleDescriptionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleDescriptionContext)
}

func (s *RuleEntityContext) Salience() ISalienceContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISalienceContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISalienceContext)
}

func (s *RuleEntityContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleEntityContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleEntityContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.EnterRuleEntity(s)
	}
}

func (s *RuleEntityContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.ExitRuleEntity(s)
	}
}

func (s *RuleEntityContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case gengineVisitor:
		return t.VisitRuleEntity(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *gengineParser) RuleEntity() (localctx IRuleEntityContext) {
	localctx = NewRuleEntityContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, gengineParserRULE_ruleEntity)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(93)
		p.Match(gengineParserRULE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(94)
		p.RuleName()
	}
	p.SetState(96)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == gengineParserDQUOTA_STRING {
		{
			p.SetState(95)
			p.RuleDescription()
		}

	}
	p.SetState(99)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == gengineParserSALIENCE {
		{
			p.SetState(98)
			p.Salience()
		}

	}
	{
		p.SetState(101)
		p.Match(gengineParserBEGIN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(102)
		p.RuleContent()
	}
	{
		p.SetState(103)
		p.Match(gengineParserEND)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleNameContext is an interface to support dynamic dispatch.
type IRuleNameContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	StringLiteral() IStringLiteralContext

	// IsRuleNameContext differentiates from other interfaces.
	IsRuleNameContext()
}

type RuleNameContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleNameContext() *RuleNameContext {
	var p = new(RuleNameContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleName
	return p
}

func InitEmptyRuleNameContext(p *RuleNameContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleName
}

func (*RuleNameContext) IsRuleNameContext() {}

func NewRuleNameContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleNameContext {
	var p = new(RuleNameContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gengineParserRULE_ruleName

	return p
}

func (s *RuleNameContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleNameContext) StringLiteral() IStringLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *RuleNameContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleNameContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleNameContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.EnterRuleName(s)
	}
}

func (s *RuleNameContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.ExitRuleName(s)
	}
}

func (s *RuleNameContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case gengineVisitor:
		return t.VisitRuleName(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *gengineParser) RuleName() (localctx IRuleNameContext) {
	localctx = NewRuleNameContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, gengineParserRULE_ruleName)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(105)
		p.StringLiteral()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleDescriptionContext is an interface to support dynamic dispatch.
type IRuleDescriptionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	StringLiteral() IStringLiteralContext

	// IsRuleDescriptionContext differentiates from other interfaces.
	IsRuleDescriptionContext()
}

type RuleDescriptionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleDescriptionContext() *RuleDescriptionContext {
	var p = new(RuleDescriptionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleDescription
	return p
}

func InitEmptyRuleDescriptionContext(p *RuleDescriptionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_ruleDescription
}

func (*RuleDescriptionContext) IsRuleDescriptionContext() {}

func NewRuleDescriptionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleDescriptionContext {
	var p = new(RuleDescriptionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gengineParserRULE_ruleDescription

	return p
}

func (s *RuleDescriptionContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleDescriptionContext) StringLiteral() IStringLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *RuleDescriptionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleDescriptionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleDescriptionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.EnterRuleDescription(s)
	}
}

func (s *RuleDescriptionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gengineListener); ok {
		listenerT.ExitRuleDescription(s)
	}
}

func (s *RuleDescriptionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case gengineVisitor:
		return t.VisitRuleDescription(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *gengineParser) RuleDescription() (localctx IRuleDescriptionContext) {
	localctx = NewRuleDescriptionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, gengineParserRULE_ruleDescription)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(107)
		p.StringLiteral()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISalienceContext is an interface to support dynamic dispatch.
type ISalienceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SALIENCE() antlr.TerminalNode
	Integer() IIntegerContext

	// IsSalienceContext differentiates from other interfaces.
	IsSalienceContext()
}

type SalienceContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySalienceContext() *SalienceContext {
	var p = new(SalienceContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_salience
	return p
}

func InitEmptySalienceContext(p *SalienceContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gengineParserRULE_salience
}

func (*SalienceContext) IsSalienceContext() {}

func NewSalienceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SalienceContext {
	var p = new(SalienceContext)
